refactoring and testing updates